<resources>
    <string name="app_name">TLDR</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="search_btn">Query</string>
    <string name="search_hint_tag">></string>
    <string name="search_hint">command</string>
    <string name="search_empty_result">This command is not included yet</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="html_template" translatable="false">
        <![CDATA[
        <html>
            <head>
                <meta charset="UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <link rel="stylesheet" type="text/css" href="%2$s">
            </head>
            <body>%1$s</body>
            </html>
        ]]>
    </string>
    <string name="html_template_not_available">
        <![CDATA[
        <html>
            <head>
                <meta charset="UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <link rel="stylesheet" type="text/css" href="%1$s">
            </head>
            <body>
                <blockquote>
                This command is not yet available.<br />
                <a href="https://github.com/tldr-pages/tldr/blob/master/CONTRIBUTING.md">Submit new command to tldr</a>
                </blockquote>
            </body>
            </html>
        ]]>
    </string>
    <string name="search_empty_keyword">You haven\'t entered yet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="favorites_activity_title">Favorites</string>


    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="platform_title">Platform</string>
    <string name="theme_title">Themes</string>

    <!-- Sync Preferences -->
    <string name="sync_database_on">Automatically Sync Database periodically
    </string>
    <string name="sync_database_off">Only download data when manually requested</string>
    <string name="sync_title">Sync Automatically</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sync_data_wait_hit">Preparing data please wait…</string>
</resources>