<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <MultiSelectListPreference
            android:defaultValue="@array/platform_values"
            android:entries="@array/platform_entries"
            android:entryValues="@array/platform_values"
            android:key="platform"
            android:title="@string/platform_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="Follow System"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="auto_sync"
            app:summaryOff="@string/sync_database_off"
            app:summaryOn="@string/sync_database_on"
            app:title="@string/sync_title" />

    </PreferenceCategory>

</PreferenceScreen>